I have no idea what I'm doing

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ head
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
-    link(rel='shortcut icon', type='image/x-icon', href='favicon.ico')
+    link(rel='shortcut icon', type='image/x-icon', href='images/favicon.ico')
     // RESET
     link(rel='stylesheet', href='stylesheets/reset.css')
     // Bootstrap
@@ -32,7 +32,10 @@ body
     #main-content
         #table-div
     footer
-        a(target='_blank', href='https://github.com/tetchel/tablequiz/issues') Submit Feedback
+        | <b>Submit Feedback</b> - 
+        a(target='_blank', href='https://github.com/tetchel/tablequiz/issues') On GitHub
+        |  |      
+        a(target='_blank', href='mailto:tetchel@gmail.com') Email Me
 
     // Scripts
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
