Some progress on uploading quiz, but table generation is broken

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,7 +33,7 @@ body
                 integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', 
                 crossorigin='anonymous')
 
-        script(src='javascripts/file-picker.js')
+        script(src='javascripts/tablegen.js')
         script(src='javascripts/dnd.js')
         script(src='javascripts/index.js')
         script(src='javascripts/validator.js')
