Uploading now works quite well. Need to handle name collisions, and selecting a new file from an uploaded table.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -74,10 +74,14 @@ button:focus {
     margin-top: 100px;
 }
 
-#file-display, #score-display {
+#table-header, #score-display {
     text-align:center;
     font-weight:bold;
     padding-bottom:5px;
+}
+
+#table-header {
+    font-size:20px;
 }
 
 table {
