--- a/views/index.jade
+++ b/views/index.jade
@@ -14,11 +14,11 @@ block content
 
     #main-content
 
-        #file-display
-            h3 ↖ Select a file!
-            // populated by file-picker.js
+        #table-header
+            p   #{tableHeader}
 
         #score-display
         // populated by validator.js
 
         #table-div
+            table !{tableData}
