--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,14 +8,14 @@ html(lang='en')
         title
             | TableQuiz
 
-        link(rel='shortcut icon', type='image/x-icon', href='favicon.ico')
+        link(rel='shortcut icon', type='image/x-icon', href='/favicon.ico')
         // RESET
-        link(rel='stylesheet', href='stylesheets/reset.css')
+        link(rel='stylesheet', href='/stylesheets/reset.css')
         link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', 
                 integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', 
                 crossorigin='anonymous')
 
-        link(rel='stylesheet', href='stylesheets/main.css')
+        link(rel='stylesheet', href='/stylesheets/main.css')
 
     body
         block content 
@@ -33,7 +33,6 @@ html(lang='en')
                     integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', 
                     crossorigin='anonymous')
 
-            script(src='javascripts/tablegen.js')
-            script(src='javascripts/dnd.js')
-            script(src='javascripts/index.js')
-            script(src='javascripts/validator.js')
+            script(src='/javascripts/tablegen.js')
+            script(src='/javascripts/dnd.js')
+            script(src='/javascripts/validator.js')
