Fix validation-upload beahviour

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,6 +33,6 @@ html(lang='en')
                     integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', 
                     crossorigin='anonymous')
 
-            script(src='/javascripts/tablegen.js')
-            script(src='/javascripts/dnd.js')
             script(src='/javascripts/validator.js')
+            script(src='/javascripts/tablegen.js')
+            script(src='/javascripts/misc.js')
