--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html(lang='en')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
         meta(name='viewport', content='width=device-width, initial-scale=1')
         title
-            | TableQuiz
+            | #{title}
 
         link(rel='shortcut icon', type='image/x-icon', href='/favicon.ico')
         // RESET
