--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,15 +17,14 @@ body {
     /* Scroll with the page */
     position: fixed;
     top: 0;
-    min-width:100%;
     height:75px;
+    min-width:100%;
     
     background: #2b2b2b;
-    color: #fafafa;
     font-size: 120%;    
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid black;    
     
-    display:inline-flex;
+    display:flex;
     flex-flow:row;
     
     padding: 15px;
@@ -42,12 +41,17 @@ body {
 #validate-button, .first-button, .second-button {
     background-color: limegreen;
     min-width: 10%;
-    border: 2px solid #1b1b1b;
+    border: 2px solid #1b1b1b;    
 }
 
 .first-button {
     background-color: cornflowerblue;    
     line-height: 27px;
+}
+
+.first-button > .glyphicon, .second-button > .glyphicon {
+    /* forgive me for this hack */
+    padding-bottom:6px;
 }
 
 .second-button {
@@ -67,20 +71,18 @@ button:focus {
     outline:0 !important;   /* Disable the blue outline - ugly against dark background */
 }
 
-/***** End top bar *****/
-
 #main-content {
     margin: 10px;
     margin-top: 100px;
 }
 
-#table-header, #score-display {
+#content-header, #score-display {
     text-align:center;
     font-weight:bold;
     padding-bottom:5px;
 }
 
-#table-header {
+#content-header {
     font-size:20px;
 }
 
@@ -93,10 +95,6 @@ table {
 table, th, tr, td {
     border: 2px solid black;
     padding:8px;
-}
-
-th.question-column {
-    
 }
 
 td {
@@ -135,9 +133,9 @@ tr:nth-child(odd) {
 }
 
 footer {
+    width:100%;
     bottom:0;
-    position:absolute:
-    left:0;
+    position:absolute;
     text-align: center;
         
     overflow:hidden;
