--- a/views/saved-quiz.jade
+++ b/views/saved-quiz.jade
@@ -1,8 +1,8 @@
 extends quiz
 
-block contextual-buttons
+block first-button
     a.first-button.btn.btn-default(href='/' title='This quiz will still be here if you come back.')
-        | Back
-    
+        span.glyphicon.glyphicon-home
+block second-button
     button.second-button.btn.btn-default(onclick='copyRelPath()')
         | Copy A Link
