--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,6 +25,8 @@ body
         
         block second-button
         
+        div.spacer
+        
         block right-button
 
     #main-content
@@ -48,4 +50,5 @@ body
         script(src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.10.5/xlsx.core.min.js")
         script(src='/js/misc.js')
         script(src='/js/validator.js')
-        script(src='/js/table.js')       
+        script(src='/js/table.js')
+        block scriptsAppend
