--- a/views/settings.jade
+++ b/views/settings.jade
@@ -13,16 +13,25 @@ append content
             span.glyphicon.glyphicon-question-sign(title="The original order of the rows is maintained when uploading a quiz.")
             | Randomize row order
             div#randomize-rows.setting-toggle.btn-group
-                button.btn.btn-default.btn-on(onclick="settingsListener(this, true)")
+                button.btn.btn-default.btn-on(onclick="settingsListener(this)")
                     | On
-                button.btn.btn-default.btn-off(onclick="settingsListener(this, false)")
+                button.btn.btn-default.btn-off(onclick="settingsListener(this)")
                     | Off
                     
-        div.setting.panel.panel-primary
+        div.setting.panel.panel-info
             span.glyphicon.glyphicon-question-sign(title="Each row will have its answers checked after you have filled in all its fields. You can still Validate the whole quiz at once.")
             | Validate after completing each row
             div#validate-after-row.setting-toggle.btn-group
-                button.btn.btn-default.btn-on(onclick="settingsListener(this, true)")
+                button.btn.btn-default.btn-on(onclick="settingsListener(this)")
                     | On
-                button.btn.btn-default.btn-off(onclick="settingsListener(this, false)")
+                button.btn.btn-default.btn-off(onclick="settingsListener(this)")
                     | Off
+                    
+        div.panel.panel-primary
+            div.panel-heading
+                | My Uploads
+            div.panel-body
+                ul#uploads-list.list-group
+                    
+append scriptsAppend
+    script(src='/js/settings.js')
