--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -2,6 +2,33 @@
     margin:auto;
     width:80%;
     margin-top:20px;
+    align-content: center;
+}
+
+.panel {
+    max-width:800px;
+    margin:auto;
+}
+
+.panel-heading {
+    font-weight: bold;
+    padding-left:20px;
+    color: #ebebeb !important;
+    text-align:center;
+}
+
+.panel-body {
+    padding:20px;
+}
+
+.list-group-item {
+    border: 1px solid #666666;
+    font-size: 16px;
+}
+
+.list-group-item:nth-child(even) {
+    border: 1px solid #666666;
+    background-color: #eaeaea;
 }
 
 .setting {
@@ -9,7 +36,11 @@
     flex-flow: row;
     align-items: center;
     
-    padding:10px;
+    margin-top:25px;
+    margin-bottom:25px;
+    padding:20px;
+    
+    font-size: 16px;
 }
 
 .glyphicon-question-sign {
@@ -21,5 +52,7 @@
 }
 
 .setting-toggle > button {
-    min-width:100px;
+    min-width: 100px;
+    font-size : 16px;
+    font-weight: bold;
 }
