--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -31,6 +31,17 @@
     background-color: #eaeaea;
 }
 
+.list-group-item:hover {
+    background-color:#fff;
+}
+
+.list-group-item > a {
+    margin:0;
+    display:block;
+    width:100%;
+    height:100%;
+}
+
 .setting {
     display: flex;
     flex-flow: row;
