random works, but will upload quizzes randomized

--- a/views/settings.jade
+++ b/views/settings.jade
@@ -10,7 +10,7 @@ block first-button
 append content
     div.settings-container
         div.setting.panel.panel-primary
-            span.glyphicon.glyphicon-question-sign(title="The original order of the rows is maintained when uploading a quiz.")
+            span.glyphicon.glyphicon-question-sign(title="Quizzes are still stored in the original row order.")
             | Randomize row order
             div#randomize-rows.setting-toggle.btn-group
                 button.btn.btn-default.btn-on(onclick="settingsListener(this)")
