--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -13,6 +13,7 @@
 .panel-heading {
     font-weight: bold;
     padding-left:20px;
+    background-color: #162fa5 !important;
     color: #ebebeb !important;
     text-align:center;
 }
@@ -24,15 +25,11 @@
 .list-group-item {
     border: 1px solid #666666;
     font-size: 16px;
-}
-
-.list-group-item:nth-child(even) {
-    border: 1px solid #666666;
-    background-color: #eaeaea;
+    padding:0;
 }
 
 .list-group-item:hover {
-    background-color:#fff;
+    background-color: #c0c0c0;
 }
 
 .list-group-item > a {
@@ -40,6 +37,14 @@
     display:block;
     width:100%;
     height:100%;
+    color:black;
+    padding:10px;
+    padding-left:20px;
+}
+
+.list-group-item > a:hover {
+    text-decoration: none;
+    font-weight:bold;
 }
 
 .setting {
