Quizzes upload in order, but also display in order always

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -81,6 +81,10 @@ button:focus {
 
 #main-content {
     margin: 10px;
+}
+
+#content-header {
+    /* Must be under the top bar */
     margin-top: 100px;
 }
 
