--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,7 +32,7 @@ body
     #main-content
         block content
             #content-header
-                | #{contentHeader}
+                | #{barTitle}
 
     block foot
         footer
