Random seems all good. Settings scroll issues. Need to add deleting My Quizzes

--- a/views/quiz.jade
+++ b/views/quiz.jade
@@ -22,5 +22,4 @@ append content
         #score-display
         // populated by validator.js
 
-        #table-div
-            table !{tableData}
+        #table-div(data-table='#{tableData}')
