--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,7 +19,7 @@ head
     
     block headAppend
 
-body
+body(style="display:none;cursor:progress")
     #top-bar
         block first-button
         
@@ -34,13 +34,6 @@ body
             #content-header
                 | #{barTitle}
 
-    block foot
-        footer
-            | <b>Submit Feedback</b> - 
-            a(target='_blank', href='https://github.com/tetchel/tablequiz/issues') On GitHub
-            |  |      
-            a(target='_blank', href='mailto:tetchel@gmail.com') Email Me
-
     block scripts
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
         script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', 
@@ -50,5 +43,4 @@ body
         script(src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.10.5/xlsx.core.min.js")
         script(src='/js/misc.js')
         script(src='/js/validator.js')
-        script(src='/js/table.js')
         block scriptsAppend
