--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,6 +47,7 @@ body {
     background-color: cornflowerblue;    
     line-height:32px;
 }
+
 .second-button {
     background-color: #cc0000;
     margin-left:10px;
@@ -91,49 +92,59 @@ button:focus {
 #content-header, #score-display {
     text-align:center;
     font-weight:bold;
-    padding-bottom:5px;
+    padding-bottom:10px;
 }
 
 #content-header {
-    font-size:20px;
+    font-size:28px;
 }
 
 table {
     border-collapse: collapse;
     width:100%;
-    table-layout: fixed;
 }
 
 table, th, tr, td {
     border: 2px solid black;
-    padding:8px;
+    padding: 3px;
 }
 
 td {
     vertical-align: middle;
-}
-
-td:first-child {
-    padding:10px;
+    min-width: 8%;
 }
 
 th {
-    background-color: #4CAF50;
+    border: 2px solid black;
+    background-color: #1b9610;
     color: white;
     text-align:center;
     font-weight: bold;
     padding:15px;
 }
 
-tr:nth-child(odd) {
-    background-color: #f5f5f5;
+tr td:first-child, tr th:first-child {
+    padding: 10px; 
+    min-width:1%;
+    white-space:nowrap;
+}
+
+tr td:first-child {
+    border: 2px solid black;
+    padding-left: 1em;
+    padding-right: 5em;
 }
 
 .answer-textarea {
     margin:0;
     padding:0;
     width:100%;
-    resize: none;
+    resize:none;
+    height:3em;
+}
+
+.hidden-answer {
+    color:transparent;
 }
 
 .correct-answer {
@@ -143,16 +154,3 @@ tr:nth-child(odd) {
 .wrong-answer {
     color:#BB2222;
 }
-
-footer {
-    width:100%;
-    bottom:0;
-    position:absolute;
-    text-align: center;
-        
-    overflow:hidden;
-    
-    padding-top: 20px;
-    padding-bottom:20px;
-}
-
